src/app/components/dialog-window/dialog-window.component.scss
.window {
  position: absolute;
  top: 20%;
  left: 25%;
  min-width: 250px;
  max-width: 1240px;
  border: 1px solid var(--cv-darkgrey);
  box-shadow: 2px 2px 6px var(--black30);
  border-radius: 10px;
  background-color: var(--cv-white);
}

.window-header {
  cursor: move;
  background-color: #ccc;
  padding: 5px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  font-family: "Roboto";
  text-shadow: 0px 0px 1px var(--cv-grey);
  font-weight: 500;
}

.full-radius {
  border-radius: 10px;
}

* {
  color: var(--cv-darkgrey);
}

.close-btn,
.minimize-btn {
  cursor: pointer;
  margin-right: 4px;
  text-align: center;
  height: 24px;
  width: 24px;
  border: 1px solid var(--cv-grey);
  border-radius: 50%;
  transition: all 0.15s ease-in-out;
}

.close-btn:hover,
.minimize-btn:hover {
  border: 1px solid var(--cv-grey);
  background-color: var(--cv-grey);

  .bi-x {
    color: var(--cv-white);
  }

  img {
    filter: brightness(163%);
  }
}

.bi-x {
  color: var(--cv-grey);
  transition: all 0.15s ease-in-out;
}

